@@ -7,7 +7,7 @@ use Storable ();
 
 use constant OFFLINE => $ENV{MOJO_REDIS_CACHE_OFFLINE};
 
-has connection => sub { OFFLINE ? shift->_offline_connection : shift->redis->_dequeue };
+has connection => sub { OFFLINE ? shift->_offline_connection : shift->redis->_dequeue->encoding(undef) };
 has deserialize => sub { \&Storable::thaw };
 has default_expire => 600;
 has namespace      => 'cache:mojo:redis';
